00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    app: forgejo
